[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctr"
version = "0.2.0"
description = "click-through rate prediction research library"
readme = "README.md"
authors = [
    { name = "jayarnim", email = "jayarnim727@email.com" }
]
urls = { Homepage = "https://github.com/jayarnim/pkg-ctr" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]